# career_agent

./: .env_example  .gitignore  README.md  api.py  database.py  index.html  index_debug.html  ingest_data.py  main.py  models.py  pyproject.toml  requirements-frontend.txt  requirements.txt  test_agent.py  test_agent_functions_unit.py  test_api_endpoints.py  test_api_functions_unit.py  test_delete_session.py  test_get_db_connection_unit.py  test_guardrails_unit.py  test_logger_config_unit.py  test_upload_document_errors.py
.github/workflows/: pylint.yml
agents/: team.py
setup/: config.py  guardrails.py
src/: agent_runner.py  api.py  index.html  local_chat.py  main.py  package.json  test_agent.py
src/agents/: agent_instructions.xlsx  agent_runner.py  backend_fx.py  build.py  config.py  frontend_fx.py  functions.py  interactions.py  models.py  team.py  tools.py  weather_agent.py
src/agents/versions/: agent_instructions.xlsx  agent_instructions_12-1-25.xlsx  agent_instructions_12-2-25.xlsx
src/app/: main.py
src/setup/: Guardrails.py  agent_functions.py  agent_logs.py  api_functions.py  backend_functions.py  config.py  database.py  frontend_functions.py  functions.py  guardrails.py  ingest_data.py  interactions.py  logger_config.py  schemas.py  session.py  util_funcs.py  web_funcs.py
src/static/: index.html  index_old.html
src/testing/: Agent_Log.xlsx
src/tests/: conftest.py  test_agent.py  test_agent_functions.py  test_agent_functions_unit.py  test_api_endpoints.py  test_api_functions_unit.py  test_backend_funcs.py  test_delete_session.py  test_frontend_funcs.py  test_frontend_fx.py  test_get_db_connection_unit.py  test_guardrails_unit.py  test_logger_config_unit.py  test_upload_document_errors.py  test_util_funcs.py  test_weather_agents.py  test_web_funcs.py
src/utils/: config.cfg  constraints.py  setup.py
